fix: rolling().restart() doesn't remove preexistent pod template annotations
Signed-off-by: Marc Nuri <marc@marcnuri.com>